Implemented SQLAlchemy, Updated OpenAPI.yaml for channel routes, Updated requirements.txt & Updated README   (#1)
* README.md update

* Changed from MySqlConnector to Sqlalchemy for handing queries to the databases, this will also allow for the future use of different databases like postgresql, sqlite and Microsoft SQL.

+ Added generated table classes
* Updated auth_controller.py & user_controller.py to now use SqlAlchemy

* Updated login response to now include user details who logged in

* Updated requirements.txt

* Updated channel_controller.py to now include a getAllChannels function, Updated requirements.txt

* channel_controller.py now have a function that will return all channels to the client from the database
+ Added a new model all_channels.py which is used when returning all the channels to the client
* Updated swagger.yaml to include this new route
* Updated requirements.txt as it has new dependencies
